--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "vue-router"
   ],
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
+    "auto-reload-brunch": "^3.0.1",
+    "bootstrap": "^4.6.2",
+    "bootstrap-vue": "^2.23.1",
+    "sass-brunch": "^3.0.1",
+    "scss": "^0.2.4",
     "vue": "^2.4.4",
     "vue-router": "^2.7.0"
   },
@@ -30,6 +36,9 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "brunch": "^2.10.10",
+    "fibers": "^5.0.3",
+    "sass": "^1.62.0",
+    "sass-loader": "^13.2.2",
     "vue-brunch": "^2.0.1"
   },
   "license": "ISC"
