--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-es2015": "^6.24.1",
     "brunch": "^2.10.10",
     "fibers": "^5.0.3",
+    "node-sass": "^8.0.0",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
     "vue-brunch": "^2.0.1"
